force-app/main/default/objects/Produto_do_Pedido__c/Produto_do_Pedido__c.object-meta.xml
<CustomObject>
    <label>Produto do Pedido</label>
    <nameField>
        <label>Produto do Pedido Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos dos Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>