force-app/main/default/objects/Produto_do_Pedido__c/fields/Custo_de_Producao__c.field-meta.xml
<CustomField>
    <fullName>Custo_de_Producao__c</fullName>
    <label>Custo de Producao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>