force-app/main/default/objects/Produto_do_Pedido__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>