force-app/main/default/objects/Produto_do_Pedido__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observacao</label>
    <type>TextArea</type>
</CustomField>