force-app/main/default/objects/Produto_do_Pedido__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Produtos dos Pedidos</relationshipLabel>
    <relationshipName>Produtos_dos_Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>