force-app/main/default/objects/Produto_do_Pedido__c/fields/Porcentagem_de_Imposto__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_de_Imposto__c</fullName>
    <label>Porcentagem de Imposto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>