force-app/main/default/objects/Produto_do_Pedido__c/fields/Preco_de_Venda__c.field-meta.xml
<CustomField>
    <fullName>Preco_de_Venda__c</fullName>
    <label>Preco de Venda</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>