force-app/main/default/objects/Produto_do_Pedido__c/fields/Preco_Final__c.field-meta.xml
<CustomField>
    <fullName>Preco_Final__c</fullName>
    <label>Preço Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>