force-app/main/default/objects/Produto_do_Pedido__c/fields/Preco_sem_Margem__c.field-meta.xml
<CustomField>
    <fullName>Preco_sem_Margem__c</fullName>
    <label>Preço sem Margem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>