force-app/main/default/objects/Produto_do_Pedido__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Produto__c</referenceTo>
    <relationshipLabel>Produtos dos Pedidos</relationshipLabel>
    <relationshipName>Produtos_dos_Pedidos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>