force-app/main/default/objects/Produto_do_Pedido__c/fields/Valor_de_Frete__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Frete__c</fullName>
    <label>Valor de Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>